# taitl-structure

./: .gitignore  Agents.md  BirthCertificate.md  License.md  Makefile  Readme.md  Troubleshooting.md  pyproject.toml
.black-cache/24.10.0/: cache.-.120.0.0.0.0.1.0.0.@.pickle
docs/: Basics.md  Compatibility.md  Configuration.md  Diagnostics.md  GeneratedPySpark.md  GettingStarted.md  Overview.md  QuickRef.md  Troubleshooting.md  Usage.md  Whitepaper.md
docs/dev/: Architecture.md  Code.md  Concepts.md  Development.md  Implementation.md  Roadmap.md  Specification.md  Style.md  Terminology.md  Testing.md  Troubleshooting.md
docs/dev/auto/: Automation.md  AutomationFocus.md  Plans.md
docs/dev/design/: AlternativeBackends.md  AnalyticalJoinCoverage.md  BackendCapabilities.md  Background.md  CLI.md  Challenges.md  CompileabilityChecker.md  CompilerPerformance.md  DSL.md  DataQualityConstraints.md  DecisionsBeforeCoding.md  DiagnosticsContract.md  DiscoveryInspection.md  ExecutionDataFlows.md  ExecutionSemanticContract.md  IntermediateRepresentation.md  OnlineExecutionRuntime.md  PySparkCodeGenerator.md  RuntimeSupportLibrary.md  SchemaModel.md  SymbolicExecutionEngine.md  V2OptimizationFeatures.md
docs/dev/planning/: P06172601.Nullability-and-type-coercion-rules.plan.md  P06172602.Join-semantics-definitions.plan.md  P06182601.Compiler-provenance-static-dataflow-lineage.md  P06182601.Compiler-provenance-static-dataflow-lineage.plan.md  P06192601.Online-execution-default.plan.md  P06202601.First-executable-contract-v0.plan.md  P06202601.Online-generated-semantic-contract.plan.md  P06202601.v1-first-executable-slice.plan.md  P06202602.Data-quality-constraints.plan.md  P06202603.Diagnostics-registry-contract.plan.md  P06202604.Backend-capability-interface.plan.md  P06202605.Integration-and-cross-libraries.plan.md  P06212601.Analytical-join-coverage.plan.md  P06212601.v0-first-executable-contract.md  P06212602.v1-symbolic-compile-slice.md  P06212603.v1-completion.md  P06212604.Local-infrastructure-integration-testing.plan.md  P06222602.Freestyle-transforms.plan.md  P06222603.Multiple-transform-outputs.plan.md  P06232601.Compiler-target-runtime-app-refactor.plan.md  P06232602.Multi-schema-subtransform-parameters.plan.md  P06252601.Declared-lanes-for-funnel-flow.plan.md  (+8 more)
docs/specifications/: AlternativeBackends.md  AnalyticalJoinCoverage.md  BackendCapabilities.md  CLI.md  CompatibilityPolicy.md  CompilerPerformanceTargets.md  ConfigSchema.md  DSL.md  DataQualityConstraints.md  Diagnostics.md  ExecutionSemanticContract.md  HookSemantics.md  IntermediateRepresentation.md  Invariants.md  JoinSemantics.md  NullabilityAndTypeCoercion.md  OnlineExecution.md  PySparkCodeGeneration.md  SchemaDeclarationSyntax.md  SchemaInheritance.md  SchemaModel.md  SchemaSemantics.md  SourceModuleRules.md  StreamingCompatibility.md  SymbolicExecution.md  UserStories.md  ValidationSemantics.md
examples/: __init__.py
examples/orders/: schemas.py  transforms.py
infra/compose/: .env_example  README.md  docker-compose.yaml
res/testing/: __init__.py
scripts/: ensure_compose_env.py  format-imports.ps1  format.ps1  run_integration.py
src/structure/: __init__.py  cli.py
tests/app/: test_public_api_snapshot.py  test_public_api_structure.py
tests/concepts/: README.md  test_public_concept_map.py
tests/golden/: test_examples_generated_output.py
tests/helpers/: example_projects.py  fake_pyspark_schema.py
tests/integration/: pytest_plugin.py
tests/metamorphic/: test_generation_stability.py  test_property_schema_fields.py
tests/user_stories/: conftest.py
(+582 files in other folders)
