[build-system]
requires = ["poetry-core>=1.9.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "structure"
version = "1.0.0"
description = "Taitl Structure Library"
authors = [ "Andrey <andrey1@taitl.com>" ]
license = "LGPL-2.1 + Ethical Use Policy"
readme = "Readme.md"
include = [
    "Readme.md",
    { path = "src/structure/app/target/pyspark/resources/runtime.py.template", format = [ "sdist", "wheel" ] },
]
packages = [
    { include = "structure", from = "src" },
]

[tool.poetry.scripts]
structure = 'structure.app.cli.api:cli'

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
click= "^8.1"
rich = "^13.9.4"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10"
flake8 = "^7.1"
flake8-pyproject = "^1.2"
isort = "^5.13"
mypy = "^1.13"
pytest = "^8.3"
pytest-mock = "^3.14"
hypothesis = "^6.131"

[tool.black]
line-length = 120
skip-string-normalization = true
extend-exclude = '''
(^/)?.venv/
| (^/)?node_modules/
| /res/testing/model/
| /examples/fixtures/
| /examples/structure_generated/
'''

[tool.isort]
profile = "black"
line_length = 120
skip = ["__init__.py"]
skip_glob = ["res/testing/model/**", "examples/fixtures/**", "examples/structure_generated/**"]
known_first_party = ["taitl", "o"]

[tool.flake8]
exclude = [
    ".venv",
    "node_modules",
    "res/testing/model",
    "examples/fixtures",
    "examples/structure_generated",
]
ignore = [
    'E231', # multiple spaces after ','
    'E241', # missing whitespace after ','
    'E302', # expected 2 blank lines, found 1
    'E305', # expected 2 blank lines after class or function definition, found 1
    "E402", # pydeeq -> module level import not at top of file
    "E501", # line too long
    'F541', # f-string is missing placeholders
    'E712', # spark -> comparison to False should be 'if cond is False:' or 'if not cond:'
    'F401', # module imported but unused
    'S101', # test -> Use of assert detected. The enclosed code will be removed when compiling to optimised byte code.
    'S307', # json.parse -> Use of possibly insecure function - consider using safer ast.literal_eval
    'W291', # trailing whitespace
    'W391', # blank line at end of file
    'W503', # line break before binary operator
    'E704', # multiple statements on one line (def)
]
per-file-ignores = [
    '__init__.py:F401', # module imported but unused
]
max-line-length = 120
count = true

[tool.mypy]
python_version = "3.11"
pretty = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_return_any = false
explicit_package_bases = true
mypy_path = ["src", "res", "tests"]
files = ["src", "examples", "tests"]
exclude = ["^res/testing/model/", "^examples/(fixtures|structure_generated)/"]

[[tool.mypy.overrides]]
module = [
    "examples.orders.*",
    "examples.structure_generated.*",
    "testing.model.v1.orders.*",
    "testing.model.v1.structure_generated.*",
]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "examples.orders.transforms.*",
]
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = [
    "pyspark",
    "pyspark.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
        "-p",
        "integration.pytest_plugin",
        "--durations=5", # Show the slowest 5 tests
        #"--color=yes",
        #"--cov=o",
]
markers = [
    "integration: live backend tests that require explicit --run-integration opt-in",
]
pythonpath = [
    "src",
    "res",
    "tests",
]
#testpaths = [ "test" ]
